name:          warpdrive
version:       4.0.0
synopsis:      Leela backbone
homepage:      http://github.com/locaweb/leela
category:      Monitoring
author:        dgvncsz0f
license:       Apache-2.0
license-file:  ../../APACHE-2.0
maintainer:    dgvncsz0f
synopsis:      leela property-graph engine
build-type:    Simple
description:   this program is the leela backbone. This provides a property-graph
               engine and a metrics monitoring system through LQL language.
cabal-version: >= 1.16

source-repository head
  type:     git
  branch:   master
  location: git://github.com/locaweb/leela.git

executable warpdrive
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -W -Wall 
  build-depends:    stm             (>= 2.4  && < 3)
                  , base            (>= 4    && < 5)
                  , time            (>= 1.4  && < 2)
                  , clock           (>= 0.3  && < 1)
                  , hedis           (>= 0.6  && < 1)
                  , hflags          (>= 0.2  && < 1)
                  , byteable        (>= 0.1  && < 1)
                  , hashable        (>= 1.2  && < 2)
                  , hslogger        (>= 1.2  && < 2)
                  , attoparsec      (>= 0.10 && < 1)
                  , bytestring      (>= 0.10 && < 1)
                  , containers      (>= 0.5  && < 1)
                  , cryptohash      (>= 0.9  && < 1)
                  , utf8-string     (>= 0.3  && < 1)
                  , zeromq3-haskell (>= 0.5  && < 1)
  hs-source-dirs:   src
  main-is:          Leela/warpdrive.hs
