name:          warpdrive
author:        DiegoSouza
license:       Apache-2.0
version:       4.0.0
synopsis:      leela property-graph engine
homepage:      http://github.com/locaweb/leela
category:      Monitoring
maintainer:    DiegoSouza
build-type:    Simple
description:   this program is the leela backbone. This provides a property-graph
               engine and a metrics monitoring system through LQL language.
license-file:  ../../LICENSE
cabal-version: >= 1.16

source-repository head
  type:     git
  branch:   master
  location: git://github.com/locaweb/leela.git

executable warpdrive
  main-is:          warpdrive.hs
  ghc-options:      -threaded -rtsopts -W -Wall 
  build-depends:    stm               (>= 2.4  && < 3)
                  , hzk               (>= 2.0  && < 3)
                  , base              (>= 4    && < 5)
                  , time              (>= 1.4  && < 2)
                  , unix              (>= 2.6  && < 3)
                  , clock             (>= 0.3  && < 1)
                  , hflags            (>= 0.2  && < 1)
                  , random            (>= 1.0  && < 2)
                  , hslogger          (>= 1.2  && < 2)
                  , attoparsec        (>= 0.11 && < 1)
                  , bytestring        (>= 0.10 && < 1)
                  , containers        (>= 0.5  && < 1)
                  , semigroups        (>= 0.11 && < 1)
                  , utf8-string       (>= 0.3  && < 1)
                  , zeromq3-haskell   (>= 0.5  && < 1)
                  , base16-bytestring (>= 0.1  && < 1)
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test-warpdrive
  type:                exitcode-stdio-1.0
  main-is:             test-warpdrive.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       stm               (>= 2.4  && < 3)
                     , hzk               (>= 2.0  && < 3)
                     , base              (>= 4    && < 5)
                     , time              (>= 1.4  && < 2)
                     , unix              (>= 2.6  && < 3)
                     , clock             (>= 0.3  && < 1)
                     , hedis             (>= 0.6  && < 1)
                     , tasty             (>= 0.3  && < 1)
                     , hflags            (>= 0.2  && < 1)
                     , random            (>= 1.0  && < 2)
                     , byteable          (>= 0.1  && < 1)
                     , hslogger          (>= 1.2  && < 2)
                     , attoparsec        (>= 0.10 && < 1)
                     , bytestring        (>= 0.10 && < 1)
                     , containers        (>= 0.5  && < 1)
                     , cryptohash        (>= 0.9  && < 1)
                     , semigroups        (>= 0.11 && < 1)
                     , tasty-hunit       (>= 0.2  && < 1)
                     , utf8-string       (>= 0.3  && < 1)
                     , zeromq3-haskell   (>= 0.5  && < 1)
                     , base16-bytestring (>= 0.1  && < 1)
  hs-source-dirs:      src
  default-language:    Haskell2010