name:          warpdrive
author:        DiegoSouza
license:       Apache-2.0
version:       5.4.1
synopsis:      leela property-graph engine
homepage:      http://github.com/locaweb/leela
category:      Monitoring
maintainer:    DiegoSouza
build-type:    Custom
description:   this program is the leela backbone. This provides a property-graph
               engine and a metrics monitoring system through LQL language.
license-file:  ../../LICENSE
cabal-version: >= 1.16

source-repository head
  type:     git
  branch:   master
  location: git://github.com/locaweb/leela.git

executable warpdrive
  main-is:         warpdrive.hs
  ghc-options:     -threaded -rtsopts -W -fllvm
  include-dirs:    ../../lib/poly1305aes/dist
  extra-lib-dirs:  ../../lib/poly1305aes/poly1305aes-20050218
  extra-libraries: poly1305aes
  build-depends:    base                 (>= 4      && < 5)
                  , stm                  (>= 2.4    && < 3)
                  , mtl                  (>= 2.1    && < 3)
                  , HTTP                 (>= 4000.2 && < 4001)
                  , time                 (>= 1.4    && < 2)
                  , text                 (>= 1.1    && < 2)
                  , unix                 (>= 2.6    && < 3)
                  , aeson                (>= 0.7    && < 1)
                  , async                (>= 2.0    && < 3)
                  , clock                (>= 0.3    && < 1)
                  , hedis                (>= 0.6    && < 1)
                  , cereal               (>= 0.4    && < 1)
                  , random               (>= 1.0    && < 2)
                  , vector               (>= 0.10   && < 1)
                  , entropy              (>= 0.0.2  && < 1)
                  , hashable             (>= 1.2    && < 2)
                  , old-locale           (>= 1      && < 2)
                  , fast-logger          (>= 2      && < 3)
                  , attoparsec           (>= 0.11   && < 1)
                  , bytestring           (>= 0.10.4 && < 1)
                  , containers           (>= 0.5    && < 1)
                  , semigroups           (>= 0.11   && < 1)
                  , utf8-string          (>= 0.3    && < 1)
                  , zeromq4-haskell      (>= 0.5    && < 1)
                  , double-conversion    (>= 0.2    && < 1)
                  , base16-bytestring    (>= 0.1    && < 1)
                  , unordered-containers (>= 0.2    && < 1)
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test-warpdrive
  type:                exitcode-stdio-1.0
  main-is:             test-warpdrive.hs
  ghc-options:         -threaded -rtsopts
  include-dirs:        ../../lib/poly1305aes/dist
  extra-lib-dirs:      ../../lib/poly1305aes/poly1305aes-20050218
  extra-libraries:     poly1305aes
  build-depends:       stm                  (>= 2.4    && < 3)
                     , base                 (>= 4      && < 5)
                     , HTTP                 (>= 4000.2 && < 4001)
                     , time                 (>= 1.4    && < 2)
                     , text                 (>= 1.1    && < 2)
                     , unix                 (>= 2.6    && < 3)
                     , aeson                (>= 0.7    && < 1)
                     , clock                (>= 0.3    && < 1)
                     , hedis                (>= 0.6    && < 1)
                     , cereal               (>= 0.4    && < 1)
                     , tasty                (>= 0.3    && < 1)
                     , random               (>= 1.0    && < 2)
                     , vector               (>= 0.10   && < 1)
                     , entropy              (>= 0.0.2  && < 1)
                     , byteable             (>= 0.1    && < 1)
                     , hslogger             (>= 1.2    && < 2)
                     , attoparsec           (>= 0.10   && < 1)
                     , bytestring           (>= 0.10.4 && < 1)
                     , containers           (>= 0.5    && < 1)
                     , semigroups           (>= 0.11   && < 1)
                     , tasty-hunit          (>= 0.2    && < 1)
                     , utf8-string          (>= 0.3    && < 1)
                     , zeromq4-haskell      (>= 0.5    && < 1)
                     , base16-bytestring    (>= 0.1    && < 1)
                     , unordered-containers (>= 0.2    && < 1)
  hs-source-dirs:      src
  default-language:    Haskell2010
