name:          warpdrive
author:        DiegoSouza
license:       Apache-2.0
version:       5.11.0
synopsis:      leela property-graph engine
homepage:      http://github.com/locaweb/leela
category:      Monitoring
maintainer:    DiegoSouza
build-type:    Simple
description:   this program is the leela backbone. This provides a property-graph
               engine and a metrics monitoring system through LQL language.
license-file:  ../../LICENSE
cabal-version: >= 1.16

source-repository head
  type:     git
  branch:   master
  location: git://github.com/locaweb/leela.git

executable warpdrive
  main-is:         warpdrive.hs
  ghc-options:     -threaded -rtsopts -W
  extra-libraries: poly1305aes
  build-depends:    base                 (>= 4        && < 5)
                  , stm                  (>= 2.4.3    && < 3)
                  , mtl                  (>= 2.1      && < 3)
                  , HTTP                 (>= 4000.2   && < 4001)
                  , time                 (>= 1.5      && < 2)
                  , text                 (>= 1.2.0.0  && < 2)
                  , unix                 (>= 2.6      && < 3)
                  , uuid                 (>= 1        && < 2)
                  , focus                (>= 0.1      && < 2)
                  , aeson                (>= 0.8.0.2  && < 1)
                  , async                (>= 2.0      && < 3)
                  , clock                (>= 0.4.1.3  && < 1)
                  , hedis                (>= 0.6      && < 1)
                  , cereal               (>= 0.4      && < 1)
                  , random               (>= 1.0      && < 2)
                  , vector               (>= 0.10     && < 1)
                  , deepseq              (>= 1.3      && < 2)
                  , entropy              (>= 0.0.2    && < 1)
                  , hashable             (>= 1.2      && < 2)
                  , parallel             (>= 3        && < 4)
                  , hashable             (>= 1.2      && < 2)
-- XXX: TESTING
                  , messagepack
--- https://github.com/informatikr/hedis/issues/16
--- https://github.com/informatikr/hedis/issues/15
                  , attoparsec           (>= 0.12.1.2 && < 1)
                  , bytestring           (>= 0.10.4   && < 1)
                  , containers           (>= 0.5      && < 1)
                  , cryptohash           (>= 0.11.6   && < 2)
                  , regex-tdfa           (>= 1.2.0    && < 2)
                  , semigroups           (>= 0.11     && < 1)
                  , statistics           (>= 0.12     && < 1)
                  , fast-logger          (>= 2        && < 3)
                  , murmur-hash          (>= 0.1      && < 2)
                  , utf8-string          (>= 0.3      && < 1)
                  , BoundedChan          (>= 1.0.3.0  && < 2)
                  , stm-containers       (>= 0.1      && < 1)
                  , zeromq4-haskell      (>= 0.5      && < 1)
                  , double-conversion    (>= 0.2      && < 1)
                  , base16-bytestring    (>= 0.1      && < 1)
                  , unordered-containers (>= 0.2      && < 1)
  hs-source-dirs:   src
  default-language: Haskell2010

executable warpgrep
  main-is:         warpgrep.hs
  ghc-options:     -threaded -rtsopts -W
  extra-libraries: poly1305aes
  build-depends:    base                 (>= 4        && < 5)
                  , stm                  (>= 2.4.3    && < 3)
                  , mtl                  (>= 2.1      && < 3)
                  , HTTP                 (>= 4000.2   && < 4001)
                  , time                 (>= 1.5      && < 2)
                  , text                 (>= 1.2.0.0  && < 2)
                  , unix                 (>= 2.6      && < 3)
                  , uuid                 (>= 1        && < 2)
                  , focus                (>= 0.1      && < 2)
                  , aeson                (>= 0.8.0.2  && < 1)
                  , async                (>= 2.0      && < 3)
                  , clock                (>= 0.4.1.3  && < 1)
                  , hedis                (>= 0.6      && < 1)
                  , cereal               (>= 0.4      && < 1)
                  , random               (>= 1.0      && < 2)
                  , vector               (>= 0.10     && < 1)
                  , deepseq              (>= 1.3      && < 2)
                  , entropy              (>= 0.0.2    && < 1)
                  , hashable             (>= 1.2      && < 2)
                  , parallel             (>= 3        && < 4)
                  , hashable             (>= 1.2      && < 2)
--- https://github.com/informatikr/hedis/issues/16
--- https://github.com/informatikr/hedis/issues/15
                  , attoparsec           (>= 0.12.1.2 && < 1)
                  , bytestring           (>= 0.10.4   && < 1)
                  , containers           (>= 0.5      && < 1)
                  , cryptohash           (>= 0.11.6   && < 2)
                  , regex-tdfa           (>= 1.2.0    && < 2)
                  , semigroups           (>= 0.11     && < 1)
                  , statistics           (>= 0.12     && < 1)
                  , fast-logger          (>= 2        && < 3)
                  , murmur-hash          (>= 0.1      && < 2)
                  , utf8-string          (>= 0.3      && < 1)
                  , BoundedChan          (>= 1.0.3.0  && < 2)
                  , stm-containers       (>= 0.1      && < 1)
                  , zeromq4-haskell      (>= 0.5      && < 1)
                  , double-conversion    (>= 0.2      && < 1)
                  , base16-bytestring    (>= 0.1      && < 1)
                  , unordered-containers (>= 0.2      && < 1)
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test-warpdrive
  type:                exitcode-stdio-1.0
  main-is:             test-warpdrive.hs
  ghc-options:         -threaded -rtsopts
  extra-libraries:     poly1305aes
  build-depends:       base                 (>= 4       && < 5)
                     , stm                  (>= 2.4     && < 3)
                     , mtl                  (>= 2.1     && < 3)
                     , HTTP                 (>= 4000.2  && < 4001)
                     , time                 (>= 1.5     && < 2)
                     , text                 (>= 1.1     && < 2)
                     , unix                 (>= 2.6     && < 3)
                     , uuid                 (>= 1       && < 2)
                     , aeson                (>= 0.8.0.2 && < 1)
                     , async                (>= 2.0     && < 3)
                     , clock                (>= 0.3     && < 1)
                     , hedis                (>= 0.6     && < 1)
                     , tasty                (>= 0.3     && < 1)
                     , cereal               (>= 0.4     && < 1)
                     , random               (>= 1.0     && < 2)
                     , vector               (>= 0.10    && < 1)
                     , entropy              (>= 0.0.2   && < 1)
                     , parallel             (>= 3       && < 4)
                     , hashable             (>= 1.2     && < 2)
                     , attoparsec           (== 0.11.3.4)
                     , bytestring           (>= 0.10.4  && < 1)
                     , containers           (>= 0.5     && < 1)
                     , semigroups           (>= 0.11    && < 1)
                     , statistics           (>= 0.12    && < 1)
                     , fast-logger          (>= 2       && < 3)
                     , tasty-hunit          (>= 0.2     && < 1)
                     , utf8-string          (>= 0.3     && < 1)
                     , zeromq4-haskell      (>= 0.5     && < 1)
                     , base16-bytestring    (>= 0.1     && < 1)
                     , unordered-containers (>= 0.2     && < 1)
  hs-source-dirs:      src
  default-language:    Haskell2010
